Documentation: Updated all docs (including README), cleaned formatting, enhanced documentation with Electricity Maps usage explanation and license attribution
Signed-off-by: nadnein <nadjav.18@gmail.com>

--- a/Todo
+++ b/Todo
@@ -1,3 +1,4 @@
 - describe EM and how ci value is determined: ci -> api -> fallback table: zone code -> fallback table: global
 - describe handling of API key via nextflow secrets 
 - include information / describe how CPU TDP data is used 
+- EM attricbution 
